Allow variable types to change during program execution, basic casting support